testdata/baselines/reference/submodule/conformance/checkJsdocParamOnVariableDeclaredFunctionExpression.errors.txt
0.js(3,4): error TS8009: The '?' modifier can only be used in TypeScript files.
0.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(4,4): error TS8009: The '?' modifier can only be used in TypeScript files.
0.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(14,12): error TS8010: Type annotations can only be used in TypeScript files.


==== 0.js (5 errors) ====
    // @ts-check
    /**
     * @param {number=} n
       ~~~~~~~~~~~~~~~~~~
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {string} [s]
    ~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
       ~~~~~~~~~~~~~~~~~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    var x = function foo(n, s) {}
    var y;
    /**
     * @param {boolean!} b
     */
    y = function bar(b) {}
    
    /**
     * @param {string} s
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    var one = function (s) { }, two = function (untyped) { };
    